[gd_scene load_steps=6 format=3 uid="uid://cs5jtyf1k77e1"]

[ext_resource type="Texture2D" uid="uid://c8fdixfqjonoe" path="res://picture/main_menu/Green_line.png" id="1_em4wj"]
[ext_resource type="Script" path="res://scene/pages/Setingprof/pages/set_psw.gd" id="1_f318i"]
[ext_resource type="Texture2D" uid="uid://2diq4dw51q5t" path="res://picture/main_menu/white_cube2.png" id="2_f0wqe"]
[ext_resource type="Texture2D" uid="uid://csvoif6l7j3qu" path="res://picture/main_menu/strelka.png" id="3_u0kmk"]
[ext_resource type="Texture2D" uid="uid://xlv5ee136cka" path="res://picture/ramkavoda.png" id="4_0clxf"]

[node name="Set_psw" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_f318i")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_right = 1.0
anchor_bottom = 1.0

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 108

[node name="Control" type="Control" parent="MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/VBoxContainer/Control"]
clip_contents = true
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = 0.5
offset_bottom = 97.5
grow_horizontal = 2
grow_vertical = 2

[node name="TextureRect" type="TextureRect" parent="MarginContainer/VBoxContainer/Control/VBoxContainer"]
custom_minimum_size = Vector2(419.735, 97)
layout_mode = 2
texture = ExtResource("1_em4wj")

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer/Control/VBoxContainer/TextureRect"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="TextureRect" type="TextureRect" parent="MarginContainer/VBoxContainer/Control/VBoxContainer/TextureRect/HBoxContainer"]
custom_minimum_size = Vector2(80, 80)
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 4
texture = ExtResource("2_f0wqe")
stretch_mode = 4

[node name="Exit" type="Button" parent="MarginContainer/VBoxContainer/Control/VBoxContainer/TextureRect/HBoxContainer/TextureRect"]
layout_mode = 0
offset_left = 71.0
offset_top = 62.0
offset_right = 133.0
offset_bottom = 124.0
rotation = 3.14159
icon = ExtResource("3_u0kmk")
flat = true
icon_alignment = 2

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer/Control/VBoxContainer/TextureRect/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 35
text = "Редактирование пароля"
horizontal_alignment = 1

[node name="Control" type="Control" parent="MarginContainer/VBoxContainer/Control/VBoxContainer/TextureRect/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4

[node name="nuls" type="Label" parent="MarginContainer/VBoxContainer/VBoxContainer/HBoxContainer"]
visible = false
layout_mode = 2
size_flags_horizontal = 4
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 19
text = "test"

[node name="Stariy" type="HBoxContainer" parent="MarginContainer/VBoxContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_constants/separation = -87

[node name="Stariy" type="LineEdit" parent="MarginContainer/VBoxContainer/VBoxContainer/Stariy"]
custom_minimum_size = Vector2(450, 80)
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_selected_color = Color(0, 0, 0, 1)
theme_override_colors/font_uneditable_color = Color(0, 0, 0, 1)
theme_override_colors/font_placeholder_color = Color(0.294118, 0.294118, 0.294118, 1)
placeholder_text = "Текущий пароль*"
flat = true

[node name="Sprite2D" type="Sprite2D" parent="MarginContainer/VBoxContainer/VBoxContainer/Stariy"]
position = Vector2(223, 39.5)
scale = Vector2(1.4359, 1.41071)
texture = ExtResource("4_0clxf")

[node name="New1" type="HBoxContainer" parent="MarginContainer/VBoxContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_constants/separation = -87

[node name="New1" type="LineEdit" parent="MarginContainer/VBoxContainer/VBoxContainer/New1"]
custom_minimum_size = Vector2(450, 80)
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_selected_color = Color(0, 0, 0, 1)
theme_override_colors/font_uneditable_color = Color(0, 0, 0, 1)
theme_override_colors/font_placeholder_color = Color(0.294118, 0.294118, 0.294118, 1)
placeholder_text = "Новый пароль*"
flat = true

[node name="Sprite2D" type="Sprite2D" parent="MarginContainer/VBoxContainer/VBoxContainer/New1"]
position = Vector2(223, 39.5)
scale = Vector2(1.4359, 1.41071)
texture = ExtResource("4_0clxf")

[node name="New2" type="HBoxContainer" parent="MarginContainer/VBoxContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_constants/separation = -87

[node name="New2" type="LineEdit" parent="MarginContainer/VBoxContainer/VBoxContainer/New2"]
custom_minimum_size = Vector2(450, 80)
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_selected_color = Color(0, 0, 0, 1)
theme_override_colors/font_uneditable_color = Color(0, 0, 0, 1)
theme_override_colors/font_placeholder_color = Color(0.294118, 0.294118, 0.294118, 1)
placeholder_text = "Повторите новый пароль*"
flat = true

[node name="Sprite2D" type="Sprite2D" parent="MarginContainer/VBoxContainer/VBoxContainer/New2"]
position = Vector2(223, 39.5)
scale = Vector2(1.4359, 1.41071)
texture = ExtResource("4_0clxf")

[node name="HBoxContainer9" type="HBoxContainer" parent="MarginContainer/VBoxContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4

[node name="Button" type="Button" parent="MarginContainer/VBoxContainer/VBoxContainer/HBoxContainer9"]
self_modulate = Color(0.745098, 0.745098, 0.745098, 1)
custom_minimum_size = Vector2(350, 80)
layout_mode = 2
size_flags_horizontal = 6
size_flags_vertical = 4
icon = ExtResource("1_em4wj")
flat = true
expand_icon = true

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer/VBoxContainer/HBoxContainer9/Button"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -70.5
offset_top = -22.0
offset_right = 70.5
offset_bottom = 14.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 26
text = "Сохранить"
horizontal_alignment = 1
vertical_alignment = 1

[connection signal="pressed" from="MarginContainer/VBoxContainer/Control/VBoxContainer/TextureRect/HBoxContainer/TextureRect/Exit" to="." method="_on_exit_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/VBoxContainer/HBoxContainer9/Button" to="." method="_on_button_pressed"]
